...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/choose_file_to_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/comment_checkbox"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="false"
        android:hint="Select File from Storage"
        android:textColor="#0000FF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_video_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment_checkbox"
        android:layout_centerHorizontal="true"
        android:text="Upload Video"
        android:textColor="#0000FF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/video_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/categories_input"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="Title"
        android:inputType="textPersonName" />

    <EditText
...
