...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/feed_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:text="Video Title"

...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:container_background_color="@android:color/transparent"
        app:container_border_width="0dp"
        app:layout_constraintEnd_toStartOf="@id/feed_like_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/feed_title_text"
        app:layout_constraintTop_toBottomOf="@+id/feed_title_text"
        app:tag_clickable="true"
        app:tag_vertical_padding="4dp" />

...
